Bug 1478335 - Use the visual viewport offset to compute the visible area in CalculateRectToZoomTo(). r=kats a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D5462